# empathy-bot

./: LICENSE  README.md  requirement.txt
backend/: .gitignore  Readme.md  main.py  pyproject.toml  requirement.txt  requirements.txt
backend/agents/: genrator_agent.py  memory_agent.py
backend/agents/utils/: prompt_template.py  prompts.py  tools.py
backend/components/: auth_utils.py  embedding.py  mongo_utils.py  openai_utils.py  pine_utils.py  redis_utils.py  token_utils.py
backend/routes/: auth.py  bot.py
backend/utils/: constants.py  load_env.py  logger_config.py  send_mail.py
frontend/: .prettierrc  env-example.text  eslint.config.js  index.html  package-lock.json  package.json
frontend/public/: site.webmanifest  sitemap.xml
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AuthInput.jsx
frontend/src/components/animation/: BlurIn.jsx  LineBlurIn.jsx  TextFade.jsx
frontend/src/components/auth/: AuthLogin.jsx  AuthSignup.jsx  OnBoardingInput.jsx
frontend/src/components/chat/: ChatInput.jsx  ChatWelcome.jsx  Header.jsx  chatInterface.jsx
frontend/src/components/landing/: About.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  NavBar.jsx
frontend/src/components/ui/: CoreMemoryDisplay.jsx  PaddingMarging.jsx
frontend/src/context/: MainContext.jsx
frontend/src/layouts/: MainLayout.jsx
frontend/src/libs/: ImageCard.jsx  api_auth.jsx  char_auth.jsx
frontend/src/pages/: Account.jsx  Home.jsx  LandingPage.jsx  NotFound.jsx  PrivacyPolicy.jsx
frontend/src/pages/auth/: ForgotPass.jsx  Login.jsx  OnBoarding.jsx  (+2 more)
